// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application should fail on invalid enum values at creation when a field type is inherited from Object.prototype 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "constructor" for type, expected one of: ACTOR, ADDRESS, ARRAY, BOOLEAN, CURRENCY, DATE, DATE_TIME, EMAILS, FILES, FULL_NAME, LINKS, MORPH_RELATION, MULTI_SELECT, NUMBER, NUMERIC, PHONES, POSITION, RATING, RAW_JSON, RELATION, RICH_TEXT, SELECT, TEXT, TS_VECTOR, UUID",
              "userFriendlyMessage": "Invalid value "constructor" for type",
              "value": "constructor",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 2 viewFields",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 3,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a page layout widget type is inherited from Object.prototype 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayoutWidget": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "constructor" for type, expected one of: VIEW, IFRAME, FIELD, FIELDS, GRAPH, STANDALONE_RICH_TEXT, TIMELINE, TASKS, NOTES, FILES, EMAILS, CALENDAR, FIELD_RICH_TEXT, WORKFLOW, WORKFLOW_VERSION, WORKFLOW_RUN, FRONT_COMPONENT, RECORD_TABLE, EMAIL_THREAD, CALL_RECORDING_SUMMARY, CALL_RECORDING_TRANSCRIPT, MESSAGE_CAMPAIGN_BODY, MESSAGE_CAMPAIGN_DETAILS, FORM_FIELD, CHAT_THREADS, CHAT",
              "userFriendlyMessage": "Invalid value "constructor" for type",
              "value": "constructor",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayoutWidget",
    "summary": {
      "pageLayoutWidget": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "constructor" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view type is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "GRID" for type, expected one of: TABLE, KANBAN, CALENDAR, LIST, FIELDS_WIDGET, TABLE_WIDGET, KANBAN_WIDGET, LIST_WIDGET, CALENDAR_WIDGET",
              "userFriendlyMessage": "Invalid value "GRID" for type",
              "value": "GRID",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view",
    "summary": {
      "totalErrors": 1,
      "view": 1,
    },
    "userFriendlyMessage": "Invalid value "GRID" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a view type is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "BOARD" for type, expected one of: TABLE, KANBAN, CALENDAR, LIST, FIELDS_WIDGET, TABLE_WIDGET, KANBAN_WIDGET, LIST_WIDGET, CALENDAR_WIDGET",
              "userFriendlyMessage": "Invalid value "BOARD" for type",
              "value": "BOARD",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 view",
    "summary": {
      "totalErrors": 1,
      "view": 1,
    },
    "userFriendlyMessage": "Invalid value "BOARD" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
